test-manual/test_echo-application.yaml
apiVersion: v1
kind: List
items:
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
    creationTimestamp: 2018-10-09T08:54:58Z
    generation: 1
    labels:
      run: echoheaders
    name: echoheaders
    namespace: default
    resourceVersion: "49740"
    selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/echoheaders
    uid: ffdb7c01-cba0-11e8-bbd1-0a02e6c4acca
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        run: echoheaders
    strategy:
      rollingUpdate:
        maxSurge: 1
        maxUnavailable: 1
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          run: echoheaders
      spec:
        containers:
        - image: k8s.gcr.io/echoserver:1.4
          imagePullPolicy: IfNotPresent
          name: echoheaders
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30

---



apiVersion: v1
kind: Service
metadata:
  labels:
    run: echoheaders
  name: echoheaders-x
  namespace: default

spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    run: echoheaders
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
